src/test/ui/nll/closure-requirements/escape-argument-callee.stderr
warning: not reporting region error due to -Znll
  --> $DIR/escape-argument-callee.rs:31:50
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                                  ^

error: free region `'_#4r` does not outlive free region `'_#3r`
  --> $DIR/escape-argument-callee.rs:31:45
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                             ^^^^^^

note: External requirements
  --> $DIR/escape-argument-callee.rs:31:38
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^^^^^^^^
   |
   = note: defining type: [closure@$DIR/escape-argument-callee.rs:31:38: 31:51<i16, for<'r, 's, 't0> extern "rust-call" fn((&ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 'r(7681))) mut &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 's(7682))) i32, &ReLateBound(DebruijnIndex { depth: 1 }, BrNamed(crate0:DefIndex(0:0), 't0(7683))) i32))>]
   = note: number of external vids: 1

error[E0597]: `*y` does not live long enough (Ast)
  --> $DIR/escape-argument-callee.rs:31:50
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                                  ^ does not live long enough
   |
note: borrowed value must be valid for the anonymous lifetime #3 defined on the body at 31:38...
  --> $DIR/escape-argument-callee.rs:31:38
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^^^^^^^^
note: ...but borrowed value is only valid for the anonymous lifetime #4 defined on the body at 31:38
  --> $DIR/escape-argument-callee.rs:31:38
   |
31 |         let mut closure = expect_sig(|p, y| *p = y);
   |                                      ^^^^^^^^^^^^^

note: No external requirements
  --> $DIR/escape-argument-callee.rs:25:1
   |
25 | / fn test() {
26 | |     let x = 44;
27 | |     let mut p = &x;
28 | |
...  |
35 | |     deref(p);
36 | | }
   | |_^
   |
   = note: defining type: fn() {test}

error: aborting due to 2 previous errors

